# ad-engine

./: .gitignore  CMakeLists.txt  compile_shaders.sh  imgui.ini  meson.build
assets/material_scripts/: background.lua  material.lua
assets/scene/: demo.json
assets/shader_scripts/: shader.lua
assets/terrain/: tile_rules.json  tiles.json
assets/terrain/forest/: data.json  map.json
assets/terrain/rooms/: data.json  data.xml
cmake/: variables.cmake
shaders/: f_simple.sc  simple.frag  simple.vert  v_simple.sc  varying.def.sc
source/: main.cpp  meson.build  test.cpp
source/editor/: editor.cpp  editor.h  meson.build  node_select_popup.cpp  node_select_popup.h  scene_tree.cpp  scene_tree.h  scene_tree_node.cpp  scene_tree_node.h  scene_tree_object.h
source/engine/: CMakeLists.txt  allocator.cpp  allocator.h  application.cpp  application.h  engine.cpp  engine.h  file_reader.cpp  file_reader.h  format.h  hash.cpp  hash.h  list.h  logging.cpp  logging.h  map.h  meson.build  observable.h  path.h  profiler.cpp  profiler.h  resource.h  resource_manager.h  singly_linked_list.h  vector.cpp  vector.h  window.cpp  window.h
source/game/: CMakeLists.txt  component.cpp  component.h  component_array.h  component_manager.h  component_registry.h  constants.h  ecs.cpp  ecs.h  meson.build  node.cpp  node.h  object.cpp  object.h  render_world.cpp  render_world.h  scene.cpp  scene.h  terrain.cpp  terrain.h  terrain_generator.cpp  terrain_generator.h  tile.cpp  tile.h  tile_set.cpp  tile_set.h  transform.cpp  transform.h  universe.cpp  universe.h  wfc.cpp  wfc.h
source/gfx/: CMakeLists.txt  camera.cpp  camera.h  light.cpp  light.h  material.cpp  material.h  material_manager.cpp  material_manager.h  mesh.cpp  mesh.h  mesh_manager.cpp  mesh_manager.h  meson.build  render_component.cpp  render_component.h  render_pipeline.cpp  render_pipeline.h  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h  sprite.cpp  sprite.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h
source/gpu/: gpu.h  meson.build  render_target.cpp  render_target.h
source/gpu/opengl/: buffer.cpp  gpu.cpp  meson.build
source/lua/: CMakeLists.txt  helpers.cpp  helpers.h  meson.build
source/math/: meson.build  size.h
source/platform/: gcc.h  meson.build
source/utils/: CMakeLists.txt  meson.build  types.h
subprojects/: .gitignore
