gfx_sources = files(
    'render_pipeline.cpp',
    'render_component.cpp',
    'texture.cpp',
    'material.cpp',
    'sprite.cpp',
    'shader.cpp',
    'shader_manager.cpp',
    'material_manager.cpp',
    'texture_manager.cpp',
    'mesh_manager.cpp',
    'camera.cpp',
    'mesh.cpp'
)
project_sources += gfx_sources

gfx_lib = static_library('gfx', gfx_sources, include_directories: inc)
